<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_dialog_popup_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/Choosetxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/information"
        android:textAlignment="center"
        android:textColor="?attr/iconTint"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/course_name"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/info_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:textColor="?attr/colorOnSurface" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/content_name"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/info_topic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="?attr/colorOnSurface" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/date_created"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/info_topic_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="?attr/colorOnSurface" />

    </LinearLayout>

</LinearLayout>


