<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Content page"
            android:textColor="?attr/colorOnSurface"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:text="@string/content_description"
            android:textColor="?attr/colorOnSurface"
            android:textSize="17sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/topics" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Tap on each topic to open its details"
            android:textColor="?attr/colorOnSurface"
            android:textSize="17sp"
            android:textStyle="normal" />


        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/display_page" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/deleting_contents"
            android:textColor="?attr/colorOnSurface"
            android:textSize="17sp"
            android:textStyle="normal" />


        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/content_options" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/content_note_this"
            android:textColor="?attr/colorOnSurface"
            android:textSize="17sp"
            android:textStyle="normal" />

        <Space
            android:layout_width="150dp"
            android:layout_height="150dp" />

    </LinearLayout>

</ScrollView>