<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:elevation="2dp">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="@id/month"
            app:layout_constraintTop_toBottomOf="@id/month" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toEndOf="@id/year"
            app:layout_constraintTop_toBottomOf="@id/month" />


        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_layout">

        <EditText
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/stroke_curve_corner"
            android:hint="@string/Book_Name_Hint"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="?attr/iconTint"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/topic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/stroke_curve_corner"
            android:hint="@string/Content_Name_Hint"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="?attr/iconTint"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/stroke_curve_corner"
            android:elevation="2dp"
            android:gravity="start"
            android:hint="@string/Note_Name_Hint"
            android:inputType="textCapSentences|textMultiLine"
            android:lineSpacingExtra="10sp"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="?attr/colorOnSurface"
            android:textSize="17sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



