<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".UpdateActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/Updatemonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Updateyear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/Updatemonth"
            app:layout_constraintTop_toBottomOf="@id/Updatemonth" />

        <TextView
            android:id="@+id/Updateday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@id/Updateyear"
            app:layout_constraintTop_toBottomOf="@id/Updatemonth" />


        <TextView
            android:id="@+id/Updatetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Updatecourse_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:hint="@string/Book_Name_Hint"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="?attr/iconTint"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Updatetopic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/stroke_curve_corner"
            android:hint="@string/Content_Name_Hint"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="?attr/iconTint"
            android:textSize="18sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/Updatetext_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/stroke_curve_corner"
            android:elevation="2dp"
            android:gravity="start"
            android:hint="@string/Note_Name_Hint"
            android:inputType="textCapSentences|textMultiLine"
            android:lineSpacingExtra="10sp"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="?attr/colorOnSurface"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>